--- a/slides/Motivation.tex
+++ b/slides/Motivation.tex
@@ -1,4 +1,4 @@
 \section{Motivation}
 \begin{frame}{Motivation}
-$\bullet$ I didn't find anything in the internet. So, I decided to create one. 
+$\bullet$ I just found the one of Badal Mondal for Univerity Leipzig. So, I decided to change it for the HTWK. 
 \end{frame}
