--- a/TitlePageInfo.tex
+++ b/TitlePageInfo.tex
@@ -1,13 +1,15 @@
 %%%%%%%%%% TITLE PAGE %%%%%%%%%%
-\title[Short title]{Title of the presentation }
-\subtitle[Group seminar]{Seminar title (e.g. Group seminar)} 
-\author{Your Name}
-\institute
-{Wilhelm-Ostwald-Institut f\"ur Physikalische und Theoretische Chemie\\
-Fakult\"at f\"ur Chemie und und Mineralogie\\
-Universit\"at Leipzig}
-\date{\today}
-\GroupLogo{imglib/ChemistryLogo.png}
+\title[SHORT-TITLE]{LONG-TITEL\\LONG-TITEL-SECONDLINE}
+\subtitle[SHORT-SUBTITEL]{LONG-SUBTITEL} 
+\author{Vorname Nachname}
+\newcommand{\faculty}{FACULTY}
+\newcommand{\university}{HTWK Leipzig}
+\newcommand{\universityLong}{Hochschule für Technik, Wirtschaft und Kultur Leipzig}
+\date{7. November 2023}
+
+%\definecolor{mainColor}{RGB}{138, 194, 209}
+\definecolor{mainColor}{RGB}{138, 194, 209}
+
 
 
 
