--- a/slides/Acknowledgement.tex
+++ b/slides/Acknowledgement.tex
@@ -1,13 +1,7 @@
 \section{Acknowledgements}
 \begin{frame}{Acknowledgements}
 \begin{itemize}
-    \item Please contact to \href{mailto:badalmondal.chembgc@gmail.com}{\textcolor{blue}{badalmondal.chembgc@gmail.com}} for further suggestions and comments.
-    \item Many thanks to Victor J\"uttner from Leipzig university for sharing his contribution to the project.
+    \item Many thanks to 
+Badal Mondal for creating the basis of this Template and Victor J\"uttner from Leipzig university for sharing his contribution to the project.
 \end{itemize}
-\end{frame}
-\begin{frame}{Future}
-    \begin{itemize}
-        \item The project is available in the github: \href{https://github.com/bmondal94/Leipzig-Beamer-Template}{\textcolor{blue}{Leipzig University Beamer Template}}
-        \item Hoping to improve further in future.
-    \end{itemize}
 \end{frame}
