--- a/slides/Introduction.tex
+++ b/slides/Introduction.tex
@@ -1,4 +1,4 @@
 \section[Intro]{Introduction}
 \begin{frame}{Introduction}
-$\bullet$ Hi there, this is a self inspired latex beamer template for Leipzig university. 
+$\bullet$ Hi there, this is a self inspired latex beamer template for HTWK Leipzig. 
 \end{frame}
