--- a/slides/CitationExample.tex
+++ b/slides/CitationExample.tex
@@ -34,6 +34,8 @@ $\bullet$ This is a test for sub-sub-section.
     \item Here is a super citation example \cite{Rubel2014, Nicklas2010}.
     \item Here is a one-liner multi-citation example \footfullcite{Rubel2014, Nicklas2010} with a footnote \renewcommand{\thefootnote}{\roman{footnote}}\footnote{Hello world}.
 \end{enumerate}
+\addfootspace{}
+\addfootspace{}
 \end{frame}
 
 \subsection{Subsection-2}
@@ -46,5 +48,7 @@ $\bullet$ This is a test for sub-sub-section.
         \item Test large list
         \item Test large list        
     \end{itemize}
+    \addfootspace{}
+    \addfootspace{}
 \end{frame}
 
