--- a/slides/CitationExample.tex
+++ b/slides/CitationExample.tex
@@ -36,6 +36,7 @@ $\bullet$ This is a test for sub-sub-section.
 \end{enumerate}
 \addfootspace{}
 \addfootspace{}
+\addfootspace{}
 \end{frame}
 
 \subsection{Subsection-2}
@@ -48,6 +49,7 @@ $\bullet$ This is a test for sub-sub-section.
         \item Test large list
         \item Test large list        
     \end{itemize}
+    \addfootspace{}
     \addfootspace{}
     \addfootspace{}
 \end{frame}
