--- a/TitlePageInfo.tex
+++ b/TitlePageInfo.tex
@@ -1,9 +1,9 @@
 %%%%%%%%%% TITLE PAGE %%%%%%%%%%
-\title[SHORT-TITLE]{LONG-TITEL\\LONG-TITEL-SECONDLINE}
-\subtitle[SHORT-SUBTITEL]{LONG-SUBTITEL} 
-\author{Vorname Nachname}
-\newcommand{\faculty}{FACULTY}
-\newcommand{\university}{HTWK Leipzig}
-\newcommand{\universityLong}{Hochschule für Technik, Wirtschaft und Kultur Leipzig}
-\date{30. Januar 2025}
+\title[\presentationShortTitle]{\presentationTitle\\\presentationTitleSecond}
+\subtitle[\presentationShortSubtitle]{\presentationSubtitle}
+\author{\authorName}
+\newcommand{\faculty}{\authorDepartment}
+\newcommand{\university}{\universityName}
+\newcommand{\universityLong}{\universityName}
+\date{\presentationDate}
 
