--- a/main.tex
+++ b/main.tex
@@ -13,11 +13,13 @@
 \def\universityName{Your University}
 
 % Configure presentation information
+\def\moduleName{Modul Name} % Optional: Module name (e.g. "Big Data Management")
+\def\presentationPreTitle{Presentation Purpose} % Optional: Text above title (e.g. "Abschlusspräsentation zum Thema")
 \def\presentationTitle{Your Presentation Title}
 \def\presentationTitleSecond{Second Line of Title} % Optional
 \def\presentationShortTitle{Short Title} % For header/footer
 \def\presentationSubtitle{Your Presentation Subtitle}
-\def\presentationShortSubtitle{Short Subtitle} % For header/footer
+\def\presentationShortSubtitle{Short Subtitle} % Optional: Short Subtitle for header/footer
 \def\presentationDate{\today} % Set to specific date like: January 30, 2024
 
 % Set footer information
