Replacing bullet points with itemized lists

--- a/beamerthemeHTWKLeipzig.sty
+++ b/beamerthemeHTWKLeipzig.sty
@@ -254,6 +254,10 @@
 \setbeamercolor{enumerate subitem}{fg=itemColor}
 \setbeamercolor{enumerate subitem}{fg=itemColor}
 
+\setbeamertemplate{itemize item}{$\bullet$}             % Level 1: filled bullet •
+\setbeamertemplate{itemize subitem}{$\circ$}            % Level 2: hollow bullet ○
+\setbeamertemplate{itemize subsubitem}{$\triangleright$} % Level 3: triangle ▷
+
 %%%%%%%%%%%%%%%%%%%% Captions %%%%%%%%%%%%%%%%%%%%%%
 \setbeamercolor{caption name}{fg=black!50}
 \setbeamertemplate{caption}[numbered]
