--- a/slides/CitationExample.tex
+++ b/slides/CitationExample.tex
@@ -13,17 +13,23 @@
 \end{frame}
 \subsection{Subsection-2}
 \begin{frame}[fragile]{2nd frame}
-   $\bullet$ Here is the next section\footnote{This is a 2nd long footnote. Here I am. Who am I?}\\
-   $\bullet$ Here I used two \verb|\addfootspace{}|. Don't do \verb|\addfootspace{\vspace{1cm}}|.
+   \begin{itemize}
+      \item Here is the next section\footnote{This is a 2nd long footnote. Here I am. Who am I?}
+      \item Here I used two \verb|\addfootspace{}|. Don't do \verb|\addfootspace{\vspace{1cm}}|.
+   \end{itemize}
    \addfootspace{}\addfootspace{}
 \end{frame}
 \subsubsection{Subsubsection-1}
 \begin{frame}{2nd frame: Subsubsection-1}
-$\bullet$ This is a test for sub-sub-section.
+\begin{itemize}
+    \item This is a test for sub-sub-section.
+\end{itemize}
 \end{frame}
 \subsubsection{Subsubsection-2}
 \begin{frame}{2nd frame: Subsubsection-2}
-$\bullet$ This is a test for sub-sub-section.
+\begin{itemize}
+    \item This is a test for sub-sub-section.
+\end{itemize}
 \end{frame}
 
 \section{Citation examples}
