--- a/slides/Introduction.tex
+++ b/slides/Introduction.tex
@@ -1,4 +1,6 @@
-\section[Intro]{Introduction}
+\section{Introduction}
 \begin{frame}{Introduction}
-$\bullet$ Hi there, this is a self inspired latex beamer template for HTWK Leipzig. 
+\begin{itemize}
+    \item Hi there, this is a self inspired latex beamer template for HTWK Leipzig.
+\end{itemize}
 \end{frame}
