--- a/slides/Motivation.tex
+++ b/slides/Motivation.tex
@@ -1,4 +1,6 @@
 \section{Motivation}
 \begin{frame}{Motivation}
-$\bullet$ I just found the one of Badal Mondal for Univerity Leipzig. So, I decided to change it for the HTWK. 
+\begin{itemize}
+    \item I just found the one of Badal Mondal for Univerity Leipzig. So, I decided to change it for the HTWK. 
+\end{itemize}
 \end{frame}
