--- a/slides/Summary.tex
+++ b/slides/Summary.tex
@@ -1,17 +1,6 @@
 \section{Summary}
 \begin{frame}{Summary}
-    $\bullet$ To summarize, this may help you to make a Leipzig university beamer presentation.
-    
-    $\bullet$ To summarize, this may help you to make a Leipzig university beamer presentation.
-    
-    $\bullet$ To summarize, this may help you to make a Leipzig university beamer presentation.
-    
-    $\bullet$ To summarize, this may help you to make a Leipzig university beamer presentation.
-    
-    $\bullet$ To summarize, this may help you to make a Leipzig university beamer presentation.
-    
-    $\bullet$ To summarize, this may help you to make a Leipzig university beamer presentation.
-    
-    
-    
+\begin{itemize}
+    \item To summarize, this may help you to make a Leipzig university beamer presentation.
+\end{itemize}
 \end{frame}
