--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 \def\BeamerAspectRatio{169} % Default slide size ratio 16:9
 
 %--------------- Defines beamer document ----------------------
-\documentclass[aspectratio=\BeamerAspectRatio]{beamer}
+\documentclass[aspectratio=\BeamerAspectRatio, t]{beamer}
 
 \usepackage{Packages}
 
