--- a/Packages.sty
+++ b/Packages.sty
@@ -2,7 +2,7 @@
 
 \usetheme{HTWKLeipzig}
 \usepackage{import}
-\usepackage[backend=biber,doi=false,isbn=false,url=false,eprint=false,date=year,citestyle=numeric-comp,]{biblatex}
+\usepackage[backend=biber,doi=false,isbn=false,url=false,eprint=false,date=year,style=authoryear,citestyle=authoryear,]{biblatex}
 \usepackage{hyperref}
 \usepackage{tcolorbox}
 \usepackage{tabularx}
