--- a/slides/citations/citations.tex
+++ b/slides/citations/citations.tex
@@ -1,5 +1,5 @@
 \renewcommand*{\bibfont}{\tiny}
-\begin{frame}{Quellen}
+
+\begin{frame}[allowframebreaks]{Quellen}
     \printbibliography
-    \vspace*{10em}
 \end{frame}
